# exercism-rust

./: Cargo.toml
allergies/.exercism/: metadata.json
allergies/src/: lib.rs
allergies/tests/: allergies.rs
alphametics/: Cargo.toml
alphametics/.exercism/: metadata.json
alphametics/src/: lib.rs
alphametics/tests/: alphametics.rs
armstrong-numbers/.exercism/: metadata.json
armstrong-numbers/src/: lib.rs
assembly-line/.exercism/: metadata.json
assembly-line/src/: lib.rs
beer-song/.exercism/: metadata.json
beer-song/src/: lib.rs
binary-search/.exercism/: metadata.json
binary-search/src/: lib.rs
binary-search/tests/: binary-search.rs
clock/.exercism/: metadata.json
clock/src/: lib.rs
clock/tests/: clock.rs
difference-of-squares/.exercism/: metadata.json
gigasecond/.exercism/: metadata.json
grains/.exercism/: metadata.json
grains/src/: lib.rs
health-statistics/.exercism/: metadata.json
hello-world/.exercism/: metadata.json
low-power-embedded-game/.exercism/: metadata.json
low-power-embedded-game/src/: lib.rs
lucians-luscious-lasagna/.exercism/: metadata.json
lucians-luscious-lasagna/src/: lib.rs
magazine-cutout/.exercism/: metadata.json
magazine-cutout/src/: lib.rs
minesweeper/.exercism/: metadata.json
minesweeper/src/: lib.rs
paasio/.exercism/: metadata.json
paasio/src/: lib.rs
paasio/tests/: paasio.rs
reverse-string/.exercism/: metadata.json
role-playing-game/.exercism/: metadata.json
role-playing-game/src/: lib.rs
semi-structured-logs/.exercism/: metadata.json
semi-structured-logs/src/: lib.rs
(+8 files in other folders)
