[workspace]

members = [
    "hello-world",
    "lucians-luscious-lasagna",
    "semi-structured-logs",
    "sublist",
    "assembly-line",
    "health-statistics",
    "clock",
    "allergies",
    "short-fibonacci",
    "tournament",
    "low-power-embedded-game",
    "role-playing-game",
    "magazine-cutout",
    "reverse-string",
]
