[workspace]

members = [
    "allergies",
    "armstrong-numbers",
    "assembly-line",
    "beer-song",
    "clock",
    "gigasecond",
    "health-statistics",
    "hello-world",
    "low-power-embedded-game",
    "lucians-luscious-lasagna",
    "magazine-cutout",
    "reverse-string",
    "role-playing-game",
    "semi-structured-logs",
    "short-fibonacci",
    "sublist",
    "tournament",
]
