[workspace]

members = [
    "allergies",
    "alphametics",
    "armstrong-numbers",
    "assembly-line",
    "binary-search",
    "beer-song",
    "clock",
    "difference-of-squares",
    "gigasecond",
    "grains",
    "health-statistics",
    "hello-world",
    "low-power-embedded-game",
    "lucians-luscious-lasagna",
    "magazine-cutout",
    "minesweeper",
    "paasio",
    "reverse-string",
    "role-playing-game",
    "semi-structured-logs",
    "short-fibonacci",
    "sublist",
    "tournament",
]
